# rust-token-counter

./: Cargo.toml
src/: main.rs
